# BoidSimulationOpenGL

./: .gitignore  CMakeLists.txt  README.md  run.sh
docs/: thingsLearned.txt  tips.txt
include/boidSimulation/: Boid.h  Flock.h  Obstacle.h  Renderer.h  ResourceManager.h  Simulation.h  WindowManager.h  config.h  glShaderLoader.h  util.h
include/boidSimulation/Settings/: config.h
libs/: CMakeLists.txt
libs/SDL2/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
libs/SDL2/lib/cmake/SDL2/: sdl2-config.cmake
libs/SDL2/lib/pkgconfig/: sdl2.pc
libs/glad/include/glad/: gl.h  glad.h
libs/glad/src/: glad.c
shaders/: birds.vert
src/: Boid.cpp  Flock.cpp  Obstacle.cpp  Renderer.cpp  ResourceManager.cpp  Simulation.cpp  WindowManager.cpp  config.cpp  glShaderLoader.cpp  main.cpp  util.cpp
src/boidSimulation/: Boid.cpp  Boid.h  Flock.cpp  Flock.h  Obstacle.cpp  Obstacle.h  Renderer.cpp  Renderer.h  Simulation.cpp  WindowManager.cpp  WindowManager.h  glShaderLoader.cpp  util.cpp
src/boidSimulation/Renderer/: Renderer.cpp
src/boidSimulation/Simulation/: Flock.cpp  Flock.h  Obstacle.cpp  Obstacle.h
src/boidSimulation/Window/: WindowManager.cpp
